@@ -38,7 +38,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.tesco.pma.api.ActionType.PUBLISH;
 import static com.tesco.pma.api.ActionType.SAVE_AS_DRAFT;
@@ -62,6 +61,7 @@ import static com.tesco.pma.review.exception.ErrorCodes.REVIEW_ALREADY_EXISTS;
 import static com.tesco.pma.review.exception.ErrorCodes.REVIEW_NOT_FOUND;
 import static com.tesco.pma.review.exception.ErrorCodes.REVIEW_STATUS_NOT_ALLOWED;
 import static com.tesco.pma.review.exception.ErrorCodes.TIMELINE_POINT_NOT_FOUND;
+import static java.util.stream.Collectors.toList;
 
 /**
  * Implementation of {@link ReviewService}.
@@ -103,6 +103,7 @@ public class ReviewServiceImpl implements ReviewService {
     private static final String NF_ORGANISATION_OBJECTIVES_EVENT_NAME = "NF_ORGANISATION_OBJECTIVES";
     private static final String NF_OBJECTIVES_APPROVED_FOR_SHARING_EVENT_NAME = "NF_OBJECTIVES_APPROVED_FOR_SHARING";
     private static final String COLLEAGUE_UUID_EVENT_PARAM = "COLLEAGUE_UUID";
+    private static final String SENDER_COLLEAGUE_UUID_EVENT_PARAM = "SENDER_COLLEAGUE_UUID";
     private static final String TIMELINE_POINT_UUID_EVENT_PARAM = "TIMELINE_POINT_UUID";
 
     private static final Comparator<OrgObjective> ORG_OBJECTIVE_SEQUENCE_NUMBER_TITLE_COMPARATOR =
@@ -378,7 +379,13 @@ public class ReviewServiceImpl implements ReviewService {
                         type,
                         null,
                         review.getNumber());
-                reviewAuditLogDAO.logReviewUpdating(actualReviews.get(0), status, reason, loggedUserUuid);
+                var actualReview = actualReviews.get(0);
+                if (review.getProperties() != null
+                        && !review.getProperties().getMapJson().isEmpty()) {
+                    actualReview.setProperties(review.getProperties());
+                    updateReview(actualReview);
+                }
+                reviewAuditLogDAO.logReviewUpdating(actualReview, status, reason, loggedUserUuid);
             } else {
                 throw notFound(REVIEW_NOT_FOUND,
                         Map.of(STATUS_PARAMETER_NAME, status,
@@ -392,7 +399,7 @@ public class ReviewServiceImpl implements ReviewService {
 
         checkReviewStateAfterUpdate(timelinePoint);
         updateTLPointStatus(timelinePoint);
-        sendEvent(timelinePoint, loggedUserUuid);
+        sendEvent(timelinePoint, loggedUserUuid, colleagueUuid);
         return status;
     }
 
@@ -538,7 +545,7 @@ public class ReviewServiceImpl implements ReviewService {
         var prevStatusesForChangeStatus = getPrevStatusesForChangeStatus(reviewType, newStatus);
         return allowedStatusesForUpdate.stream()
                 .filter(prevStatusesForChangeStatus::contains)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     private List<PMTimelinePointStatus> getAllowedStatusesForTLPointUpdate(PMTimelinePointStatus newStatus) {
@@ -593,10 +600,14 @@ public class ReviewServiceImpl implements ReviewService {
     }
 
     private List<PMTimelinePointStatus> getStatusesForUpdate(PMReviewType reviewType) {
-        if (reviewType.equals(OBJECTIVE)) {
-            return List.of(DRAFT, DECLINED, APPROVED);
-        } else {
-            return List.of(DRAFT, DECLINED);
+        switch (reviewType) {
+            case OBJECTIVE:
+            case EYR:
+                return List.of(DRAFT, DECLINED, APPROVED);
+            case MYR:
+                return List.of(DRAFT, DECLINED);
+            default:
+                return Collections.emptyList();
         }
     }
 
@@ -728,22 +739,23 @@ public class ReviewServiceImpl implements ReviewService {
         return defaultValue;
     }
 
-    private void sendEvent(String eventName, UUID colleagueUuid){
+    private void sendEvent(String eventName, UUID colleagueUuid) {
         var event = EventSupport.create(eventName,
                 Map.of(COLLEAGUE_UUID_EVENT_PARAM, colleagueUuid));
 
         eventSender.sendEvent(event, null, true);
     }
 
-    private void sendEvent(TimelinePoint timelinePoint, UUID colleagueUuid){
+    private void sendEvent(TimelinePoint timelinePoint, UUID loggedUserUUID, UUID recipientUUID) {
         var eventName = STATUS_TO_EVENT_NAME_MAP.get(timelinePoint.getStatus());
 
-        if(eventName == null){
+        if (eventName == null) {
             return;
         }
 
         var event = EventSupport.create(eventName, Map.of(
-                COLLEAGUE_UUID_EVENT_PARAM, colleagueUuid,
+                COLLEAGUE_UUID_EVENT_PARAM, recipientUUID,
+                SENDER_COLLEAGUE_UUID_EVENT_PARAM, loggedUserUUID,
                 TIMELINE_POINT_UUID_EVENT_PARAM, timelinePoint.getUuid()));
 
         eventSender.sendEvent(event, null, true);
